Data Ingestion Completed

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/lakshitjain/Developer/ML Projects/Brain-Tumor-MRI-Classification'"
+       "'c:\\\\Users\\\\nikhi\\\\Downloads\\\\Brain-Tumor-MRI-Classification'"
       ]
      },
      "execution_count": 2,
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "0e39982f",
    "metadata": {},
    "outputs": [],
@@ -45,10 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "d6f0573c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\nikhi\\Downloads\\Brain-Tumor-MRI-Classification\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "import urllib.request as request\n",
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "30919364",
    "metadata": {},
    "outputs": [],
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "2695f3d0",
    "metadata": {},
    "outputs": [],
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "bedc6f22",
    "metadata": {},
    "outputs": [],
@@ -139,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "3581d84c",
    "metadata": {},
    "outputs": [
@@ -147,14 +156,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-08-24 13:13:02,182] : INFO : common : YAML file config/config.yaml loaded successfully.\n",
-      "[2025-08-24 13:13:02,184] : INFO : common : YAML file params.yaml loaded successfully.\n",
-      "[2025-08-24 13:13:02,185] : INFO : common : Created directory: artifacts\n",
-      "[2025-08-24 13:13:02,185] : INFO : common : Created directory: artifacts/data_ingestion\n",
-      "[2025-08-24 13:13:02,184] : INFO : common : YAML file params.yaml loaded successfully.\n",
-      "[2025-08-24 13:13:02,185] : INFO : common : Created directory: artifacts\n",
-      "[2025-08-24 13:13:02,185] : INFO : common : Created directory: artifacts/data_ingestion\n",
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/masoudnickparvar/brain-tumor-mri-dataset?dataset_version_number=1...\n",
+      "[2025-08-26 15:49:20,175] : INFO : common : YAML file config\\config.yaml loaded successfully.\n",
+      "[2025-08-26 15:49:20,191] : INFO : common : YAML file params.yaml loaded successfully.\n",
+      "[2025-08-26 15:49:20,195] : INFO : common : Created directory: artifacts\n",
+      "[2025-08-26 15:49:20,197] : INFO : common : Created directory: artifacts/data_ingestion\n",
       "Downloading from https://www.kaggle.com/api/v1/datasets/download/masoudnickparvar/brain-tumor-mri-dataset?dataset_version_number=1...\n"
      ]
     },
@@ -162,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 149M/149M [00:29<00:00, 5.29MB/s] "
+      "100%|██████████| 149M/149M [00:12<00:00, 12.6MB/s] "
      ]
     },
     {
@@ -183,9 +188,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-08-24 13:13:35,057] : INFO : 2863440271 : Downloaded file from kaggle hub: /Users/lakshitjain/.cache/kagglehub/datasets/masoudnickparvar/brain-tumor-mri-dataset/versions/1\n",
-      "[2025-08-24 13:13:35,059] : INFO : 2863440271 : Moved file to: artifacts/data_ingestion/brain-mri\n",
-      "[2025-08-24 13:13:35,059] : INFO : 2863440271 : Moved file to: artifacts/data_ingestion/brain-mri\n"
+      "[2025-08-26 15:49:43,256] : INFO : 2863440271 : Downloaded file from kaggle hub: C:\\Users\\nikhi\\.cache\\kagglehub\\datasets\\masoudnickparvar\\brain-tumor-mri-dataset\\versions\\1\n",
+      "[2025-08-26 15:49:43,266] : INFO : 2863440271 : Moved file to: artifacts/data_ingestion\\brain-mri\n"
      ]
     }
    ],
@@ -224,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
