--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/lakshitjain/Developer/ML Projects/Brain-Tumor-MRI-Classification'"
+       "'c:\\\\Users\\\\nikhi\\\\Downloads\\\\Brain-Tumor-MRI-Classification'"
       ]
      },
      "execution_count": 2,
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "20fd8def",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "3c40750b",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "638b02a4",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "55fcd867",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "940c323f",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "511cf985",
    "metadata": {},
    "outputs": [
@@ -179,20 +179,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-08-24 18:15:43,806] : INFO : common : YAML file config/config.yaml loaded successfully.\n",
-      "[2025-08-24 18:15:43,810] : INFO : common : YAML file params.yaml loaded successfully.\n",
-      "[2025-08-24 18:15:43,811] : INFO : common : Created directory: artifacts\n",
-      "[2025-08-24 18:15:43,811] : INFO : common : Created directory: artifacts/prepare_base_model\n",
-      "[2025-08-24 18:15:43,810] : INFO : common : YAML file params.yaml loaded successfully.\n",
-      "[2025-08-24 18:15:43,811] : INFO : common : Created directory: artifacts\n",
-      "[2025-08-24 18:15:43,811] : INFO : common : Created directory: artifacts/prepare_base_model\n"
+      "[2025-08-26 15:53:07,218] : INFO : common : YAML file config\\config.yaml loaded successfully.\n",
+      "[2025-08-26 15:53:07,225] : INFO : common : YAML file params.yaml loaded successfully.\n",
+      "[2025-08-26 15:53:07,228] : INFO : common : Created directory: artifacts\n",
+      "[2025-08-26 15:53:07,229] : INFO : common : Created directory: artifacts/prepare_base_model\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lakshitjain/Developer/ML Projects/Brain-Tumor-MRI-Classification/venv/lib/python3.10/site-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "c:\\Users\\nikhi\\Downloads\\Brain-Tumor-MRI-Classification\\venv\\Lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
       "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
      ]
     },
@@ -313,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-08-24 18:15:44,096] : WARNING : saving_api : You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+      "[2025-08-26 15:53:07,534] : WARNING : saving_api : You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
      ]
     }
    ],
@@ -354,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
