--- a/research/03_prepare_callbacks.ipynb
+++ b/research/03_prepare_callbacks.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/lakshitjain/Developer/ML Projects/Brain-Tumor-MRI-Classification'"
+       "'c:\\\\Users\\\\nikhi\\\\Downloads\\\\Brain-Tumor-MRI-Classification'"
       ]
      },
      "execution_count": 2,
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e2000c0c",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c2848030",
    "metadata": {},
    "outputs": [
@@ -140,15 +140,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-08-24 18:27:51,390] : INFO : common : YAML file config/config.yaml loaded successfully.\n",
-      "[2025-08-24 18:27:51,394] : INFO : common : YAML file params.yaml loaded successfully.\n",
-      "[2025-08-24 18:27:51,394] : INFO : common : Created directory: artifacts\n",
-      "[2025-08-24 18:27:51,394] : INFO : common : YAML file params.yaml loaded successfully.\n",
-      "[2025-08-24 18:27:51,394] : INFO : common : Created directory: artifacts\n",
-      "[2025-08-24 18:27:51,396] : INFO : common : Created directory: artifacts/prepare_callbacks/checkpoint_dir\n",
-      "[2025-08-24 18:27:51,398] : INFO : common : Created directory: artifacts/prepare_callbacks/tensorboard_log_dir\n",
-      "[2025-08-24 18:27:51,396] : INFO : common : Created directory: artifacts/prepare_callbacks/checkpoint_dir\n",
-      "[2025-08-24 18:27:51,398] : INFO : common : Created directory: artifacts/prepare_callbacks/tensorboard_log_dir\n"
+      "[2025-08-26 15:54:15,449] : INFO : common : YAML file config\\config.yaml loaded successfully.\n",
+      "[2025-08-26 15:54:15,455] : INFO : common : YAML file params.yaml loaded successfully.\n",
+      "[2025-08-26 15:54:15,457] : INFO : common : Created directory: artifacts\n",
+      "[2025-08-26 15:54:15,459] : INFO : common : Created directory: artifacts\\prepare_callbacks\\checkpoint_dir\n",
+      "[2025-08-26 15:54:15,461] : INFO : common : Created directory: artifacts\\prepare_callbacks\\tensorboard_log_dir\n"
      ]
     }
    ],
@@ -188,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
